--- a/LayoutSubviewTest/Base.lproj/Main.storyboard
+++ b/LayoutSubviewTest/Base.lproj/Main.storyboard
@@ -1,14 +1,18 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12121" systemVersion="16G29" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12089"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +20,55 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="aoI-L1-W3f">
+                                <rect key="frame" x="0.0" y="20" width="375" height="647"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Hyp-hn-ps2">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="128"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="128" id="dxo-eD-6RP"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="STF-5u-nsS">
+                                        <rect key="frame" x="0.0" y="128" width="375" height="519"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="519" id="aAC-sh-Ulp"/>
+                                        </constraints>
+                                    </view>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="STF-5u-nsS" secondAttribute="bottom" id="72s-xv-GiM"/>
+                                    <constraint firstItem="Hyp-hn-ps2" firstAttribute="width" secondItem="aoI-L1-W3f" secondAttribute="width" id="DkS-tF-qOu"/>
+                                    <constraint firstItem="STF-5u-nsS" firstAttribute="leading" secondItem="Hyp-hn-ps2" secondAttribute="leading" id="Eqj-eS-2yA"/>
+                                    <constraint firstItem="STF-5u-nsS" firstAttribute="trailing" secondItem="Hyp-hn-ps2" secondAttribute="trailing" id="FAC-7V-dBU"/>
+                                    <constraint firstItem="Hyp-hn-ps2" firstAttribute="leading" secondItem="aoI-L1-W3f" secondAttribute="leading" id="bJs-BS-CLa"/>
+                                    <constraint firstItem="STF-5u-nsS" firstAttribute="top" secondItem="Hyp-hn-ps2" secondAttribute="bottom" id="cTF-KV-00L"/>
+                                    <constraint firstAttribute="trailing" secondItem="Hyp-hn-ps2" secondAttribute="trailing" id="f08-pY-iJ4"/>
+                                    <constraint firstItem="Hyp-hn-ps2" firstAttribute="top" secondItem="aoI-L1-W3f" secondAttribute="top" id="pdV-Te-v9Q"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="aoI-L1-W3f" secondAttribute="trailing" id="3eD-1n-ayx"/>
+                            <constraint firstItem="aoI-L1-W3f" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="ZYy-bb-Tpg"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="aoI-L1-W3f" secondAttribute="bottom" id="pD7-Dl-heK"/>
+                            <constraint firstItem="aoI-L1-W3f" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="pUn-Uu-neS"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="mView" destination="Hyp-hn-ps2" id="4hV-dr-OA9"/>
+                        <outlet property="mViewHeightCon" destination="dxo-eD-6RP" id="eTr-YX-5hE"/>
+                        <outlet property="nView" destination="STF-5u-nsS" id="tgZ-f2-mJa"/>
+                        <outlet property="nViewHeightCon" destination="aAC-sh-Ulp" id="awp-Mq-I06"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="117.59999999999999" y="122.78860569715144"/>
         </scene>
     </scenes>
 </document>
